--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "opentrons-ot2-http-python-wrapper"]
-	path = opentrons-ot2-http-python-wrapper
+	path = opentrons_api
 	url = https://github.com/steiva/opentrons-ot2-http-python-wrapper.git
